Ignored some generated files, added Vagrantfile

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 SABT/
 .DS_Store
 documentation
+.vagrant
+SABT_MainUnit/default/dep/
+SABT_MainUnit/default/NUL
+UserInterface(Primary)/default/NUL
