--- a/SABT_MainUnit/default/Makefile
+++ b/SABT_MainUnit/default/Makefile
@@ -15,9 +15,7 @@ COMMON = -mmcu=$(MCU)
 
 ## Compile options common for all C compilation units.
 CFLAGS = $(COMMON)
-
 CFLAGS += -Wall -gdwarf-2 -std=gnu99   -DF_CPU=8000000UL -Os -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
-
 CFLAGS += -MD -MP -MT $(*F).o -MF dep/$(@F).d 
 
 ## Assembly specific flags
@@ -27,7 +25,7 @@ ASMFLAGS += -x assembler-with-cpp -Wa,-gdwarf2
 
 ## Linker flags
 LDFLAGS = $(COMMON)
-LDFLAGS += -Wl,--defsym=__stack=0x4000 -Wl,-Map=SABT_MainUnit.map
+LDFLAGS +=  -Wl,-Map=SABT_MainUnit.map
 
 
 ## Intel Hex file production flags
