--- a/SABT_MainUnit/default/Makefile
+++ b/SABT_MainUnit/default/Makefile
@@ -37,7 +37,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 
 ## Objects that must be built in order to link
-OBJECTS = SABT_MainUnit.o USART_Keypad.o USART_PC.o VS1053.o SPI.o SD_routines.o FAT32.o UI_Handle.o MD1.o MD2.o MD3.o PC_Handle.o 
+OBJECTS = SABT_MainUnit.o USART_Keypad.o USART_PC.o VS1053.o SPI.o SD_routines.o FAT32.o UI_Handle.o MD1.o MD2.o MD3.o PC_Handle.o MD4.o 
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -78,6 +78,9 @@ MD3.o: ../MD3.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 PC_Handle.o: ../PC_Handle.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+MD4.o: ../MD4.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 ##Link
