--- a/SABT_MainUnit/default/Makefile
+++ b/SABT_MainUnit/default/Makefile
@@ -37,7 +37,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 
 ## Objects that must be built in order to link
-OBJECTS = SABT_MainUnit.o USART_Keypad.o USART_PC.o VS1053.o SPI.o SD_routines.o FAT32.o UI_Handle.o MD1.o MD2.o MD3.o PC_Handle.o MD4.o MD5.o 
+OBJECTS = SABT_MainUnit.o USART_Keypad.o USART_PC.o VS1053.o SPI.o SD_routines.o FAT32.o UI_Handle.o MD1.o MD2.o MD3.o PC_Handle.o MD4.o MD5.o audio.o MD6.o script_common.o 
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -84,6 +84,15 @@ MD4.o: ../MD4.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 MD5.o: ../MD5.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+audio.o: ../audio.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+MD6.o: ../MD6.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+script_common.o: ../script_common.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 ##Link
