spacing fixes for merge

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ documentation
 .vagrant
 SABT_MainUnit/default/*
 UserInterface(Primary)/default/*
+Reference/share_fold_mac (vboxsrv) (F) - Shortcut.lnk
